Adds route for posting profile pictures
