# api/controllers/applicants.js
@@ -21,7 +21,7 @@ const secret = process.env.APP_JWT_SECRET || "this is a temp secret string";
 
 const getAllApplicants = (req, res, next) => {
   Applicant.findAll({
-    include: [User, JobExperience],
+    include: [User, JobExperience, PersonalityEvaluation],
     attributes: { exclude: ["salt", "hashedPassword"] }
   })
     .then(applicants => {
@@ -187,7 +187,6 @@ const updateApplicant = (req, res, next) => {
       ]);
     })
     .then(([applicant]) => {
-      console.log("in here?", applicant);
       return User.findById(applicant.UserId, {
         include: [
           {
@@ -218,9 +217,23 @@ const updateApplicant = (req, res, next) => {
     .catch(next);
 };
 
+const addProfilePictureToApplicant = asyncMiddleware(async (req, res, next) => {
+  console.log(req.swagger.params.data.value);
+  console.log(req.swagger.params.applicantId.value);
+
+  res.json({
+    successful: true,
+    result: {
+      yo: "yo"
+    },
+    status: 201
+  });
+});
+
 module.exports = {
   getAllApplicants,
   getApplicantById,
   createApplicant,
-  updateApplicant
+  updateApplicant,
+  addProfilePictureToApplicant
 };
